# Mcidia_ai

./: .replit  DEPLOYMENT.md  DESIGN_SYSTEM_SIDEBAR.md  PAYMENT_NOTIFICATIONS_GUIDE.md  README.md  SIDEBAR_ENHANCEMENT_GUIDE.md  SIDEBAR_VISUAL_GUIDE.md  add_seed_content.py  app.py  design_guidelines.md  init_production_db.py  migrate_admin_models.py  migrate_enable_file_upload.py  migrate_legacy_members.py  migrate_organizations.py  migrate_roles_and_memberships.py  models.py  nixpacks.toml  package-lock.json  package.json  pyproject.toml  replit.md  requirements.txt  seed_admin.py  seed_erp.py  seed_services.py  setup_database.py
attached_assets/: Pasted---1762189531979_1762189531980.txt  Pasted---1762526760014_1762526760014.txt  Pasted--1-HR-Home-AI-Engine-HR-Intell-1764867219980_1764867219983.txt  Pasted--2026-01-08-17-53-24-0000-2-ERROR-Exception-in-worker-p_1767894829373.txt  Pasted--2026-01-08-17-56-24-0000-2-ERROR-Exception-in-worker-p_1767895123603.txt  Pasted--2026-01-08-18-12-34-0000-2-ERROR-Exception-in-worker-p_1767896457430.txt  Pasted--2026-01-08-18-47-10-419-ERROR-in-app-Exception-on-auth_1767898121259.txt  Pasted--3-Billing-Transactions--1762179558325_1762179558325.txt  Pasted--ERP-ERP--1763045480008_1763045480008.txt  Pasted--Feasibility-Studies-UI-Description--1764176418054_1764176418054.txt  Pasted--File-app-venv-lib-python3-11-site-packages-gunicorn-u-_1767897505281.txt  Pasted--HR-AI-Engine-AI-Engine-HR-Intellig-1764610777514_1764610777515.txt  Pasted--HR-Module-HR-ERP-1763050415902_1763050415902.txt  Pasted-2-UI--1764174419083_1764174419084.txt  (+17 more)
(+203 files in other folders)
